Hacked together release for 26.1-pre-3.
- Very likely to have new bugs!
- Update to Minecraft 26.1-pre-3
- Level state files have moved again (biome order changes at upgrade)
* Switch from Architectury Loom to Unimined ultra-early alpha
* Deal with losing implemented interfaces in the non-Fabric code
* Resolve jar duplicates with EXCLUDE strategy (may regret this)
- Annotate all packages with @NullMarked
- Annotate impl packages with @ApiStatus.Internal
* Switch all null marking to org.jspecify.annotations
- TerraBlender compatibility is broken in this release
- ModernerBeta compatibility is broken in this release
- Some useful API javadoc improvements
- API methods and docs switched to mojmap names
* Implementation methods and docs partially switched to mojmap names
* Optimize imports in java files